# fuzzy-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-fis.txt  requirements-timeseries.txt  requirements.txt
.claude/: registry.md  tasks.md
.claude/templates/: issue-template.md  pr-template.md
.github/instructions/: *.instructions.md
data/raw/: mamdani_dataset.csv
fis_mamdaniEx/: climate.ipynb
fuzzy_lab/: __init__.py
fuzzy_lab/mamdani/: __init__.py  rules.py
notebooks/: anfis_training.ipynb  fis_mamdani.ipynb
scripts/: download_kaggle_dataset.py  generate_dataset.py  prepare_kaggle_dataset.py
src/fuzzylab/: __init__.py
src/fuzzylab/anfis/: __init__.py  anfis.py  engine.py  evaluation.py  layers.py  training.py
src/fuzzylab/fis/: __init__.py  mamdani.py
src/fuzzylab/fis/mamdani/: __init__.py  definitions.py  rules.py
src/fuzzylab/timeseries/: __init__.py
tests/: test_anfis.py  test_fis.py  test_mamdani_water_irrigation.py
